[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Interactive/Interactive.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Interactive/TimerSwitch.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Switch (6).wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/Countdown (5) Tick.wav" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PrismMesh" id=2]
size = Vector3( 1, 1, 1 )

[node name="TimerSwitch" groups=["Switch"] instance=ExtResource( 1 )]
collision_layer = 4
monitorable = true
script = ExtResource( 2 )

[node name="MeshInstance" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0.496276, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )

[node name="SFX" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01332, 0 )
stream = ExtResource( 3 )
unit_db = 7.878
bus = "SFX"

[node name="TickSFX" type="AudioStreamPlayer3D" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01423, 0 )
stream = ExtResource( 4 )
unit_db = -3.0
unit_size = 15.0
max_db = 1.0
bus = "SFX"

[node name="CheckPos" type="Position3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601667, 0 )

[node name="DeactivateTimer" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="player_interacted" from="." to="." method="_on_Switch_player_interacted"]
[connection signal="timeout" from="DeactivateTimer" to="." method="_on_DeactivateTimer_timeout"]
